--- a/index.html
+++ b/index.html
@@ -17,8 +17,13 @@ by justxd22.github.io 2024 13th feb
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="user-scalable=no">
 
-<title>prettiest of the prettiest :)</title>
-
+<title>can i take uuuu to da moooon :)</title>
+<link rel="icon" href="favico.ico"  type="image/x-icon">
+<meta name="description" content="can i take uuuu to da moooon :)">
+<meta property="og:site_name" content="can i take uuuu to da moooon :)">
+<meta property="og:type" content="can i take uuuu to da moooon :)">
+<meta property="og:title" content="can i take uuuu to da moooon :)">
+<meta property="og:image" content="favico.ico">
 <script src="./script/maf.js"></script>
 <!-- <script src="https://cdn.jsdelivr.net/npm/eruda"></script> -->
 <link href="./style/kitty.css" rel="stylesheet">
