--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ by justxd22.github.io 2024 13th feb
 
 <title>can i take uuuu to da moooon :)</title>
 <link rel="icon" href="favico.ico"  type="image/x-icon">
-<meta name="description" content="can i take uuuu to da moooon :)">
+<meta name="twitter:image" content="favico.ico" />
 <meta property="og:site_name" content="can i take uuuu to da moooon :)">
 <meta property="og:type" content="can i take uuuu to da moooon :)">
 <meta property="og:title" content="can i take uuuu to da moooon :)">
@@ -63,6 +63,7 @@ by justxd22.github.io 2024 13th feb
 </head>
 
 <body class="preventSelect" onload="lol();">
+    <img id="ws" src="favico.ico" alt=":]" style="display: none; visibility: hidden;">
     <div id="bg" class="bg-image" style="display: none; z-index: -1000;"></div>
     <div id="hii" class="hiiys">LOVINNNNN...</div>
     <div id="prog" class="progress">
