--- a/index.html
+++ b/index.html
@@ -63,7 +63,10 @@ by justxd22.github.io 2024 13th feb
 </head>
 
 <body class="preventSelect" onload="lol();">
-    <img id="ws" src="favico.ico" alt=":]" style="display: none; visibility: hidden;">
+  <div class="globe art" style="display: none;">
+    <img id="ws" src="style/fav.png" alt=":]">
+    <img id="wss" src="https://qweewqi.github.io/favvnabiiiiii/favico.ico" alt=":]">
+  </div>
     <div id="bg" class="bg-image" style="display: none; z-index: -1000;"></div>
     <div id="hii" class="hiiys">LOVINNNNN...</div>
     <div id="prog" class="progress">
