--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@ by justxd22.github.io 2024 13th feb
 <meta name="viewport" content="user-scalable=no">
 
 <title>can i take uuuu to da moooon :)</title>
-<link rel="icon" href="favico.ico"  type="image/x-icon">
-<meta name="twitter:image" content="favico.ico" />
+<link rel="icon" href="https://qweewqi.github.io/favvnabiiiiii/favico.ico"  type="image/x-icon">
+<meta name="twitter:image" content="https://qweewqi.github.io/favvnabiiiiii/favico.ico" />
 <meta property="og:site_name" content="can i take uuuu to da moooon :)">
 <meta property="og:type" content="can i take uuuu to da moooon :)">
 <meta property="og:title" content="can i take uuuu to da moooon :)">
-<meta property="og:image" content="favico.ico">
+<meta property="og:image" content="https://qweewqi.github.io/favvnabiiiiii/favico.ico">
 <script src="./script/maf.js"></script>
 <!-- <script src="https://cdn.jsdelivr.net/npm/eruda"></script> -->
 <link href="./style/kitty.css" rel="stylesheet">
