--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@ by justxd22.github.io 2024 13th feb
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="user-scalable=no">
 
-<title>can i take uuuu to da moooon :)</title>
-<link rel="icon" href="https://qweewqi.github.io/favvnabiiiiii/favico.ico"  type="image/x-icon">
-<meta name="twitter:image" content="https://qweewqi.github.io/favvnabiiiiii/favico.ico" />
-<meta property="og:site_name" content="can i take uuuu to da moooon :)">
+<title>can iii take uuuu to da moooon :)</title>
+<link rel="icon" href="https://qweewqi.github.io/favvnabiiiiii/style/fav.png"  type="image/x-icon">
+<meta name="twitter:image" content="https://qweewqi.github.io/favvnabiiiiii/style/fav.png" />
+<meta property="og:site_name" content="can iii take uuuu to da moooon :)">
 <meta property="og:type" content="can i take uuuu to da moooon :)">
-<meta property="og:title" content="can i take uuuu to da moooon :)">
-<meta property="og:image" content="https://qweewqi.github.io/favvnabiiiiii/favico.ico">
+<meta property="og:title" content="can iii take uuuu to da moooon :)">
+<meta property="og:image" content="https://qweewqi.github.io/favvnabiiiiii/style/fav.png">
 <script src="./script/maf.js"></script>
 <!-- <script src="https://cdn.jsdelivr.net/npm/eruda"></script> -->
 <link href="./style/kitty.css" rel="stylesheet">
@@ -65,7 +65,7 @@ by justxd22.github.io 2024 13th feb
 <body class="preventSelect" onload="lol();">
   <div class="globe art" style="display: none;">
     <img id="ws" src="style/fav.png" alt=":]">
-    <img id="wss" src="https://qweewqi.github.io/favvnabiiiiii/favico.ico" alt=":]">
+    <img id="wss" src="https://qweewqi.github.io/favvnabiiiiii/style/fav.png" alt=":]">
   </div>
     <div id="bg" class="bg-image" style="display: none; z-index: -1000;"></div>
     <div id="hii" class="hiiys">LOVINNNNN...</div>
